# src/controllers/LocalController.js
@@ -1,48 +1,51 @@
 const { default: axios } = require("axios");
 const Local = require("../models/Local");
-const { userId } = require("../middleware/userId");
+const { getUserId } = require("../middleware/getUserId");
 const Description = require("../models/LocalDescription");
 
 class LocalController {
-  // Método para listar todos os Locais da Natureza do Usuário
+  // Método para listar todos os Locais da Natureza do Usuário [OK]
   async listar(req, res) {
-    const { userId } = req.userId;
-
-    try {
-      const locais = await Local.findAll({ where: { userId } });
-      res.json(locais);
-    } catch (error) {
-      console.error("Erro ao localizar Locais da Natureza:", error);
-      res.status(500).json({ error: "Erro ao localizar Local da Natureza." });
-    }
+    getUserId(req, res, async () => {
+      // console.log(idUser,":::ID_USUARIO:::")
+      try {
+        const locais = await Local.findAll({ where:{userId : idUser }});
+        res.json(locais);
+      } catch (error) {
+        console.error("Erro ao localizar Locais da Natureza:", error);
+        res
+          .status(500)
+          .json({ error: "Erro ao localizar Locais da Natureza." });
+      }
+    });
   }
 
-  // Método para cadastrar um Local da Natureza [ ok ]
+  // Método para cadastrar um Local da Natureza
   async cadastrar(req, res) {
-    userId(req, req, async () => {
-      const user_Id = req.userId;
-      //console.log(user_Id,"<<ID_USUÁRIO>>")
-      const { name, address, cep, desc_flora, desc_fauna } = req.body;
+    getUserId(req, res, async () => {
+      const userId = idUser;
+      const { name, address, cep, numero, descFlora, descFauna } = req.body;
 
       try {
-        // Cria o novo local
         const novoLocal = await Local.create({
           name,
           address,
           cep,
-          userId: user_Id,
+          numero,
+          userId,
         });
-       // console.log(novoLocal, "<<NOVO_LOCAL>>");
-        const novaDescription = await Description.create({
-          userId: user_Id,
-          local_id: novoLocal.id,
-          data_visita: new Date(),
-          desc_fauna,
-          desc_flora,
-        });
-        //console.log(novaDescription, "<<NOVA_DESCRIÇÃO>>");
 
-        res.status(201).json({ local: novoLocal, description: novaDescription });
+        const novaDescription = await Description.create({
+          userId,
+          localId: novoLocal.id,
+          dataVisita: new Date(),
+          descFauna,
+          descFlora,
+        });
+
+        res
+          .status(201)
+          .json({ local: novoLocal, description: novaDescription });
       } catch (error) {
         console.error("Erro ao cadastrar o local:", error);
         res.status(500).json({ error: "Erro ao cadastrar o local." });
@@ -50,20 +53,21 @@ class LocalController {
     });
   }
 
-  // Método para mapear um local do Usuário pelo address [ incompleto ]
+  // Método para mapear um local da Natureza
   async mapear(req, res) {
-    // Chamada do middleware para verificar o token JWT
-    userId(req, res, async () => {
-      const userId = req.userId;
-      const local_id = req.params.local_id;
-      //console.log(local_id);
-      //console.log(userId);
+    getUserId(req, res, async () => {
+      const userId = req.user.id;
+      const localId = req.params.localId;
 
       try {
         const local = await Local.findOne({
-          where: { id: local_id, userId: userId },
+          where: { id: localId, userId },
         });
-        //console.log(local.address) testando o endereço do local
+
+        if (!local) {
+          return res.status(404).json({ error: "Local não encontrado." });
+        }
+
         const response = await axios.get(
           `https://nominatim.openstreetmap.org/search.php?q=${encodeURIComponent(
             local.address
@@ -77,72 +81,70 @@ class LocalController {
         } else {
           return res
             .status(404)
-            .json({ error: "Não foi possível encontrar o local." });
+            .json({ error: "Não foi possível encontrar o local no mapa." });
         }
       } catch (error) {
-        console.error("Erro ao obter local:", error);
-        res.status(500).json({ error: "Erro ao obter local." });
+        console.error("Erro ao mapear o local:", error);
+        res.status(500).json({ error: "Erro ao mapear o local." });
       }
     });
   }
 
-  // Método para atualizar um local da Natureza.
+  // Método para atualizar um Local da Natureza
   async atualizar(req, res) {
-    const { userId } = req.body; // Extraindo o userId do corpo da requisição
-    const { local_id } = req.params;
-    const { name, address, description, lat, lon, CEP } = req.body;
+    getUserId(req, res, async () => {
+      const userId = req.user.id;
+      const { localId } = req.params;
+      const { name, address } = req.body;
 
-    try {
-      // Atualiza o nome e o endereço na tabela de Locais da Natureza
-      const [localAtualizado] = await Local.update(
-        {
-          name,
-          address,
-        },
-        {
-          where: {
-            id: local_id,
-            userId, // Adicionando userId para garantir que o usuário atualize apenas seus locais
-          },
+      try {
+        const [localAtualizado] = await Local.update(
+          { name, address },
+          {
+            where: { id: localId, userId },
+          }
+        );
+
+        if (!localAtualizado) {
+          return res
+            .status(404)
+            .json({
+              error: "Local não encontrado ou não pertence ao usuário.",
+            });
         }
-      );
 
-      // Verifica se o local foi atualizado
-      if (!localAtualizado) {
-        return res
-          .status(404)
-          .json({ error: "Local não encontrado ou não pertence ao usuário." });
+        res.status(200).json({ message: "Local atualizado com sucesso!" });
+      } catch (error) {
+        console.error("Erro ao atualizar o local:", error);
+        res.status(500).json({ error: "Erro ao atualizar o local." });
       }
-    } catch (error) {
-      console.error("Erro ao atualizar a descrição do local:", error);
-      res
-        .status(500)
-        .json({ error: "Erro ao atualizar a descrição do local." });
-    }
+    });
   }
 
-  // Método para Apagar um local da Natureza
+  // Método para deletar um Local da Natureza
   async deletar(req, res) {
-    const { userId } = req.body; // Extraindo o userId do corpo da requisição
-    const { local_id } = req.params;
+    getUserId(req, res, async () => {
+      const userId = req.user.id;
+      const { localId } = req.params;
 
-    try {
-      const localExistente = await Local.findOne({
-        where: { id: local_id, userId },
-      });
+      try {
+        const localExistente = await Local.findOne({
+          where: { id: localId, userId },
+        });
 
-      if (!localExistente) {
-        return res
-          .status(404)
-          .json({ error: "O local não existe ou não pertence ao usuário." });
+        if (!localExistente) {
+          return res
+            .status(404)
+            .json({ error: "O local não existe ou não pertence ao usuário." });
+        }
+
+        await Local.destroy({ where: { id: localId } });
+        res.status(204).end();
+      } catch (error) {
+        console.error("Erro ao deletar o local:", error);
+        res.status(500).json({ error: "Erro ao deletar o local." });
       }
-
-      await Local.destroy({ where: { id: local_id } });
-      res.status(204).end();
-    } catch (error) {
-      console.error("Erro ao deletar o local:", error);
-      res.status(500).json({ error: "Erro ao deletar o local." });
-    }
+    });
   }
 }
 
